Timeline Added; Read More Link Styled

--- a/static/css/scroll.css
+++ b/static/css/scroll.css
@@ -9,6 +9,5 @@
 
 ::-webkit-scrollbar-thumb {
     padding: 10px;
-    background: #3f2570;
-
+    background: linear-gradient(to bottom right, #2a0845, #6441A5);
 }
