--- a/static/css/timeline.css
+++ b/static/css/timeline.css
@@ -1,56 +1,171 @@
-.timeline {
-  min-width: 300px;
-  max-width: 500px;
-  margin: auto;
-}
-.timeline p {
-  font-size: 1em;
-  line-height: 1.75em;
-  border-top: 3px solid;
-  border-image: linear-gradient(to right, #743ad5 0%, #d53a9d 100%);
-  border-image-slice: 1;
-  border-width: 3px;
+* {
   margin: 0;
-  padding: 40px;
-  counter-increment: section;
+  padding: 0;
+  box-sizing: border-box;
+}
+.timeline-main {
+  width: 100%;
+  height: auto;
+  display: grid;
+  place-items: center;
+  padding: 50px 0;
+}
+
+.timeline-container {
+  width: 70%;
+  margin-top: 10%;
+  height: auto!important;
   position: relative;
-  color: #34435e;
 }
-.timeline p:before {
-  content: counter(section);
+
+.timeline-container ul {
+  list-style: none;
+}
+
+.timeline-container ul::after {
   position: absolute;
+  content: '';
+  width: 2px;
+  height: 100%;
+  background-image: linear-gradient(to bottom, rgb(106,6,236), rgb(220,0,240));
+  transform: translateX(-50%);
+}
+
+.timeline-content {
+  width: 50%;
+  height: auto;
+  padding: 15px 20px;
+  background-color: white;
+  box-shadow: 1px 1px 25px rgba(0,0,0,0.384);
+  border-radius: 10px;
+  margin-bottom: 30px;
+  z-index: 99;
+  position: relative;
+}
+
+.timeline-content:hover {
+  transition: 5s ease-in-out;
+  color: white;
+  background: linear-gradient(to bottom, rgb(106,6,236), rgb(220,0,240));
+}
+
+.timeline-content:hover * {
+  color: white;
+}
+
+.timeline-content:nth-child(odd) {
+  float: left;
+  clear: right;
+  transform: translateX(-30px);
+  text-align: right;
+}
+
+.timeline-content:nth-child(even) {
+  float: right;
+  clear: left;
+  transform: translateX(30px);
+}
+
+.timeline-content:nth-child(8) {
+  margin-bottom: 0;
+}
+
+.timeline-content__title {
+  font-size: 22px;
+  font-weight: 500;
+  color: rgb(106,6,236);
+}
+
+.timeline-content__content {
+  font-size: 15px;
+  color: #444;
+  margin: 7px 0;
+  line-height: 23px;
+}
+
+.timeline-content__date {
+  position: absolute;
+  top: -35px;
+  left: 20px;
+  width: 135px;
+  height: 35px;
+  border-radius: 20px;
+  color: white;
+  background-image: linear-gradient(to bottom, rgb(106,6,236), rgb(220,0,240));
+  display: grid;
+  place-items: center;
+  font-size: 14px;
+}
+
+.timeline-content .circle {
+  width: 30px;
+  height: 30px;
+  background-color: rgba(220,0,240, 0.403);
   border-radius: 50%;
-  padding: 10px;
-  height: 1.25em;
-  width: 1.25em;
-  background-color: #34435e;
-  text-align: center;
-  line-height: 1.25em;
-  color: #fff;
-  font-size: 1em;
+  top: 0;
+  position: absolute;
 }
-.timeline p:nth-child(odd) {
-  border-right: 3px solid;
-  padding-left: 0;
+
+.timeline-content .circle::after {
+  content: ' ';
+  width: 15px;
+  height: 15px;
+  background-color: rgb(106,6,236);
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-.timeline p:nth-child(odd):before {
-  left: 100%;
-  margin-left: -20px;
+
+.timeline-content:nth-child(odd) .circle {
+  right: -30px;
+  transform: translate(50%, -50%);
 }
-.timeline p:nth-child(even) {
-  border-left: 3px solid;
-  padding-right: 0;
+
+.timeline-content:nth-child(even) .circle {
+  left: -30px;
+  transform: translate(-50%, -50%);
 }
-.timeline p:nth-child(even):before {
-  right: 100%;
-  margin-right: -20px;
+
+/* Responsiveness */
+
+@media screen and (max-width: 1224px) {
+  .timeline-container {
+    margin-top: 15%;
+    width: 85%;
+  }
 }
-.timeline p:first-child {
-  border-top: 0;
-  border-top-right-radius: 0;
-  border-top-left-radius: 0;
-}
-.timeline p:last-child {
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
+
+@media screen and (max-width: 933px) {
+  .timeline-container {
+    width: 80%;
+    margin-top: 30%;
+    transform: translateX(15px);
+  }
+
+  .timeline-container ul::after {
+    left: 0px;
+  }
+
+  .timeline-content {
+    width: 100%;
+    float: none;
+    clear: none;
+    margin-bottom: 80px;
+  }
+  .timeline-content:nth-child(odd) {
+    transform: translateX(0);
+    text-align: left;
+  }
+  .timeline-content:nth-child(odd) .timeline-content__date {
+    left: 20px;
+  }
+  .timeline-content:nth-child(odd) .circle {
+    left: -30px;
+    transform: translate(-50%, -50%);
+  }
+  .timeline-content:nth-child(even) {
+    transform: translateX(0);
+  }
 }
