--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -124,6 +124,33 @@ nav {
   transform: none;
 }
 
+.cp-tag {
+  text-decoration: none;
+  display: inline-block;
+  position: relative;
+  opacity: 0.75;
+  font-weight: bold;
+  font-family: "Orbitron", sans-serif;
+}
+
+.cp-tag::before {
+  transition: 300ms;
+  height: 3px;
+  content: "";
+  position: absolute;
+  background-color: white;
+  width: 0%;
+  bottom: 20px;
+}
+
+.cp-tag:hover::before {
+  width: 100%;
+}
+
+.cp-tag:hover {
+  opacity: 1;
+}
+
 .sectionHead {
   font-size: 2em;
   color: black;
@@ -144,4 +171,13 @@ nav {
 .background-xenith {
   background: linear-gradient(to right, #6441A5, #2a0845);
   transition: all 0.8s ease-in-out;
+}
+
+nav .active {
+  text-decoration: underline;
+  text-underline-offset: 10px;
+  text-decoration-thickness: 3px;
+  color: #fff;
+  opacity: 1;
+  font-weight: bold;
 }
