--- a/static/css/about.css
+++ b/static/css/about.css
@@ -1,8 +1,13 @@
 .about-container{
- margin: 5% !important;
+padding: 5%;
+padding-top: 1%;
 }
 .toggle-text{
     cursor: pointer;
     font-weight: bold;
     color: #6441A5;
+}
+#about{
+    padding-top: 6%;
+    
 }
