--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,8 +53,8 @@ html {
 
 @media only screen and (max-width: 700px) {
   .lottie-bg {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vh;
     object-fit: cover;
   }
 
