--- a/static/css/timeline.css
+++ b/static/css/timeline.css
@@ -22,8 +22,12 @@
   font: normal 16px/1.5 "Helvetica Neue", sans-serif;
   color:black;
   padding-bottom: 15px;
+  width:100vw;
 }
-
+.timeline ul
+{
+  padding:0px;
+}
 
 .timeline ul li {
   list-style-type: none;
