--- a/static/css/team.css
+++ b/static/css/team.css
@@ -28,104 +28,189 @@
     background-size: cover;
   }
 
-  .team-card {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px 0;
-    flex-wrap: wrap;
-    border-radius: 10%;
-  }
-
 }
 
 #team .sectionHead {
     color: white;
 }
 
-.team-card {
+.image-card {
+  width: var(--size);
+  height: var(--size);
+  border-radius: var(--radius);
   position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 40px 0;
-  flex-wrap: wrap;
-  border-radius: 10%;
-}
+  background-size: cover;
+  margin: calc(var(--size) * 20 / 100);
+  border:5px solid white;
 
-.team-card .container {
-  position: relative;
-  width: 320px;
-  height: 400px;
-  color: #000;
-  background-color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 20px 30px;
-  transition: 0.5s;
-  border-radius: 10%;
+  
 }
+.image-card:before {
 
-.team-card .container:hover {
-  transform: translateY(-20px);
-}
-
-.team-card .container::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 10%;
-  background: white;
+  top:90%;
+  width: 90%;
+  height: 20%;
+  background-image: inherit;
+  background-size: cover;
+  border-radius: var(--radius);
+  z-index:-1;
+  filter: blur(12px);
+  opacity: 0;
+  left: 50%;
+  transform: translate(-50%, 10%);
 }
-
-.team-card .container::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: white;
-  filter: blur(10px);
-}
-
-.team-card .container span {
-  position: absolute;
-  align-self: baseline;
-  margin-top: 20px;
-  text-align: center;
-  font-weight: bold;
-  color: #000;
-  font-size: 1.5rem;
-  z-index: 2;
-}
-
-.team-card .container h1 {
-  position: absolute;
-  align-self: flex-end;
-  background: transparent;
-  z-index: 2;
-  font-size: 1.5rem;
-  font-weight: bolder;
-  color: black;
-}
-
-.team-card .container img {
-  position: absolute;
-  align-self: center;
-  background: transparent;
-  z-index: 2;
-}
-
-.team-card-img
+/* .image-card:hover .content {
+  transform: perspective(50px) translateZ(2px);
+} */
+.caption
 {
-  width: 200px;
-  height: 35vh;
-  border-radius: 20px;
-  border: 3px solid black;
+  
+  background-color: rgb(41, 39, 39,0.5);
+  top: 79%;
+  width: 100%;
+  height: 21%;
+  position: absolute;
+  border-radius: 0px 0px var(--radius) var(--radius); 
+  
+}
+.teamcontent {
+  position: relative;
+  z-index: 1;
+  transition: transform 0.3s ease;
+  color: white;
+  background: none;
+  height: 50px;
+  /* margin-top: 200px; */
+  border: none;
+  text-align: center;
+  top: 58%;
+ 
+ 
+ 
+}
+.teamcontent h2 {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+ display: inline;
+  color: white;
+  font-size: 25px;
+}
+.teamcontent h3 {
+  font-size: 20px;
+
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  display: inline;
+   color: white;
+   margin-top:0px;
+
+ }
+
+ /* .final{
+   
+   padding: 0px 0px 0px 0px;
+   
+ }
+ .final:before{
+ 
+ }
+ .final:after{
+  
+ }
+  */
+ * {
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+.card {
+  transform-style: preserve-3d;
+}
+.dcard {
+  position: relative;
+  display: block;
+  perspective: 500px;
+}
+.col-md-12, .col-md-4 {
+  margin-top:10vh;
+  height: var(--size);
+}
+.col-md-12 .dcard {
+  perspective: 3000px;
+}
+
+.trigger {
+  position: absolute;
+  height: 33.333333%;
+  width: 33.333333%;
+  display: block;
+  z-index: 2;
+}
+.trigger:nth-child(1) {
+  left: 0%;
+  top: 0%;
+}
+.trigger:nth-child(1):hover ~ .card {
+  transform: rotateY(8deg) rotateX(-5deg);
+}
+.trigger:nth-child(2) {
+  left: 33.333333%;
+  top: 0%;
+}
+.trigger:nth-child(2):hover ~ .card {
+  transform: rotateY(0deg) rotateX(-5deg);
+}
+.trigger:nth-child(3) {
+  left: 66.666666%;
+  top: 0%;
+}
+.trigger:nth-child(3):hover ~ .card {
+  transform: rotateY(-8deg) rotateX(-5deg);
+}
+.trigger:nth-child(4) {
+  left: 0%;
+  top: 33.333333%;
+}
+.trigger:nth-child(4):hover ~ .card {
+  transform: rotateY(8deg);
+}
+.trigger:nth-child(5) {
+  left: 33.333333%;
+  top: 33.333333%;
+}
+.trigger:nth-child(5):hover ~ .card {
+  transform: rotateY(0deg) rotateX(0deg);
+}
+.trigger:nth-child(6) {
+  left: 66.666666%;
+  top: 33.333333%;
+}
+.trigger:nth-child(6):hover ~ .card {
+  transform: rotateY(-8deg) rotateX(0deg);
+}
+.trigger:nth-child(7) {
+  left: 0%;
+  top: 66.666666%;
+}
+.trigger:nth-child(7):hover ~ .card {
+  transform: rotateY(8deg) rotateX(5deg);
+}
+.trigger:nth-child(8) {
+  left: 33.333333%;
+  top: 66.666666%;
+}
+.trigger:nth-child(8):hover ~ .card {
+  transform: rotateY(0deg) rotateX(5deg);
+}
+.trigger:nth-child(9) {
+  left: 66.666666%;
+  top: 66.666666%;
+}
+.trigger:nth-child(9):hover ~ .card {
+  transform: rotateY(-8deg) rotateX(5deg);
+}
+.dcard:hover .content {
+  transform: perspective(50px) translateZ(2px);
+}
+ 
+.uk-position-top-center {
+  top:0px!important;
 }
