--- a/static/css/event.css
+++ b/static/css/event.css
@@ -15,7 +15,7 @@
     overflow: hidden;
     padding: 5%;
     z-index: -1;
-    background: url('/static/img/bg-event.png');
+    background: url('../img/bg-event.png');
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
