--- a/static/css/team.css
+++ b/static/css/team.css
@@ -18,7 +18,7 @@
   overflow: hidden;
   /* padding: 5%; */
   /* background: linear-gradient(45deg, #743ad5 0%, #d53a9d 100%); */
-  background: url('../img/bgtemp5.png');
+  background: url('../img/team/wallpaperflare.com_wallpaper.jpg');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
