--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -154,7 +154,7 @@ nav {
 
 .sectionHead {
   font-size: 2em;
-  color: black;
+  color: rgb(255, 251, 251);
   font-family: "Orbitron", sans-serif;
   text-transform: uppercase;
   font-weight: bold;
