Read more fix in About Section

--- a/static/css/about.css
+++ b/static/css/about.css
@@ -5,7 +5,7 @@ padding-top: 1%;
 .toggle-text{
     cursor: pointer;
     font-weight: bold;
-    color: #6441A5;
+    color: #fff;
 }
 #about{
     padding-top: 6%;
