--- a/static/css/sponsor.css
+++ b/static/css/sponsor.css
@@ -23,7 +23,7 @@
   width: 320px;
   height: 400px;
   color: #000;
-  background-color: #fff;
+  /* background-color: #fff; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -44,8 +44,7 @@
   width: 100%;
   height: 100%;
   border-radius: 10%;
-  background: linear-gradient(45deg, #c33764, #1d2671);
-}
+  background: linear-gradient(45deg, #7f2588, #0a165c);}
 
 .sponsor-card .container::after {
   content: "";
