--- a/static/css/team.css
+++ b/static/css/team.css
@@ -181,8 +181,15 @@
 }
 
 @media screen and (max-width:768px) {
-  #team
-  {
-    min-height: 1500vh;
+  main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: auto;
+    overflow: visible;
+    margin-top: 10%;
   }
+  
 }
